few changes and single device login

--- a/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
+++ b/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
@@ -6,7 +6,7 @@
     <nav id="sidebar" class="sidebar">
         <div class="sidebar-content">
             <!-- Welcome Message in Sidebar -->
-            <h4 class="text-center mt-3 text-light">Welcome to Admin Dashboard</h4>
+            <h4 class="text-center mt-3 text-light">CDSR Admin Dashboard</h4>
             <hr class="bg-light">
 
             <ul class="nav flex-column mt-3">
@@ -40,7 +40,7 @@
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 ">
-                Inventory Management System
+                Central Dead Stock Register
             </span>
 
                 <!-- Login/Logout Button (Right Aligned) -->
